--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "packages/orbit-res"]
 	path = packages/orbit-res
 	url = git@gitlab.sensoro.com:lins/frontend/orbit-res.git
+
+[submodule "packages/orbit-graph"]
+	path = packages/orbit-graph
+	url = git@gitlab.sensoro.com:lins/frontend/orbit-graph.git
