"feat: add submodule orbit-graph"

--- a/lib/generators/module/templates/nginx/nginx.conf
+++ b/lib/generators/module/templates/nginx/nginx.conf
@@ -14,6 +14,6 @@ server {
   # Load configuration files for the default server block.
 
   location / {
-    try_files $uri /graph/index.html;
+    try_files $uri /<%= name %>/index.html;
   }
 }
