--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,7 @@
   path = packages/orbit-res
   url = git@gitlab.sensoro.com:lins/frontend/orbit-res.git
       
+[submodule "orbit-graph"]
+  path = orbit-graph
+  url = git@gitlab.sensoro.com:lins/frontend/orbit-graph.git
+      
