--- a/lib/generators/module/templates/antman.yaml
+++ b/lib/generators/module/templates/antman.yaml
@@ -1,14 +1,14 @@
 globalConfig:
   ANTMAN_APP_GROUP: lins
-  ANTMAN_APP_NAME: lins-<%= name %>
+  ANTMAN_APP_NAME: lins-<%= moduleName %>
   ANTMAN_APP_TYPE: frontend
   ANTMAN_APP_PORT: '80'
 deploy:
-  - name: lins-<%= name %>
+  - name: lins-<%= moduleName %>
 ingress:
   - type: web
     paths:
       - path: /<%= name %>
-        deploy: lins-<%= name %>
+        deploy: lins-<%= moduleName %>
 envFrom: []
 env: []
