--- a/lib/generators/module/templates/nginx/nginx.conf
+++ b/lib/generators/module/templates/nginx/nginx.conf
@@ -15,5 +15,10 @@ server {
 
   location / {
     try_files $uri /<%= name %>/index.html;
+
+    if ($request_filename ~* .*\.(?:htm|html)$)
+    {
+        add_header Cache-Control "no-cache";
+    }
   }
 }
